--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,19 @@
-body{
-  background-color: lightgray;
+#header{
+  margin-top: 20%;
+  text-align: center;
 }
-#destinationNames, h1, h4, #header{
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+button{
+  width: 100px;
+  height: 50px;
+  margin: 10px;
+  border-radius: 10px;
 }
-.desination-Card{
-  width: 400px;
-  border: 2px solid black;
-  border-radius: 5px;
-  margin: 20px auto;
-}
-#img-Card{
-  width: 100%;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
+#b1{
+  padding: 10px;
+  background-color: black;
+  color: white;
+  border-radius: 10px;
+  border: 1px solid black;
+  width: 30%;
+  margin: 0px auto;
 }
